--- a/withdraw-styles.css
+++ b/withdraw-styles.css
@@ -218,6 +218,15 @@ input[type=number] {
     background-color: #000000;
 }
 
+.sol-icon img {
+    width: 70% !important;
+    height: 70% !important;
+    display: block;
+    margin: 0 auto;
+    object-fit: contain;
+    object-position: center;
+}
+
 .trx-icon {
     background-color: #FF0000;
 }
